@@ -269,9 +269,9 @@
 		<Product type="0001" id="0001" name="Switchkeeper Plug-in Appliance Module"/>
 	</Manufacturer>
 	<Manufacturer id="014a" name="Ecolink">
-		<Product type="0001" id="0001" name="PIR Motion Sensor"/>
-		<Product type="0001" id="0002" name="Door/Window Sensor"/>
-		<Product type="0001" id="0003" name="Garage Door Sensor"/>
+		<Product type="0001" id="0001" name="PIR Motion Sensor" config="ecolink/sensor.xml"/>
+		<Product type="0001" id="0002" name="Door/Window Sensor" config="ecolink/sensor.xml"/>
+		<Product type="0001" id="0003" name="Garage Door Sensor" config="ecolink/sensor.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0087" name="Eka Systems">
 	</Manufacturer>
